--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
 name: "blog-template"
-title: "___'s Blog"
+title: "Audrey's Blog"
 output_dir: "docs"
 navbar:
   right:
@@ -10,8 +10,8 @@ navbar:
     - text: "About Me"
       href: "posts/about/index.html"
     - icon: fab fa-github
-      href: https://github.com/BioDataScience-Course/blog-template
-base_url: http://biodatascience-course.sciviews.org/blog-template/
+      href: https://github.com/audrey1007/audrey-audrey1_blog
+base_url: audrey1007.github.io/audrey-audrey1_blog/
 collections:
     posts:
       share: [twitter, linkedin, facebook]
