--- a/_site.yml
+++ b/_site.yml
@@ -1,7 +1,10 @@
 name: "blog-template"
-title: "Audrey's Blog"
+title: "Breast Cancer Blog"
 output_dir: "docs"
 navbar:
+  logo:
+    image: images/cancer.jpg
+    href: https://gcm.rmnet.be/imgcontrol/c750-d511/clients/rmnet/content/medias/medical/oncology/pink_ribbon.jpg
   right:
     - text: "Home"
       href: index.html
